--- a/design_system/index.html
+++ b/design_system/index.html
@@ -178,7 +178,7 @@
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
       </div>
     </div>
 
@@ -187,7 +187,7 @@
       <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
         <div class="blankHXS"></div>
       </div>
     </div>
@@ -196,7 +196,7 @@
       <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
-          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
         <div class="blankHXS"></div>
 
       </div>
@@ -345,10 +345,14 @@
         <h6>h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
         <div class="blankHS"></div>
 
-        <p class="tArrow">specialText</p>
-        <p class="specialTextHR">specialText</p>
+        <strong>
+          <h2>Bold Lorem ipsum dolor sit amet</h2>
+        </strong>
 
-        <h4><a href="" class="textUnderline colorGrey"> text decoration</a></h4>
+        <p class="tArrow">specialText, Lorem ipsum dolor sit amet</p>
+        <p class="specialTextHR">specialText, Lorem ipsum dolor sit amet</p>
+
+        <h4><a href="" class="textUnderline colorGrey">text decoration</a></h4>
         <h4 class="textDecor">text decoration</h4>
       </div>
     </div>
@@ -359,27 +363,21 @@
   <div class="wrapper">
     <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     <div class="blankHS"></div>
-    <div class="Grid Grid--gutters Grid--cols-2 Grid--top">
-      <div class="Grid-cell">
-
-        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell"> <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
           <img class="intro-logo" src="../icon/in.svg" alt="linkedin">
-        </a>
-
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        </a> <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
           <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-        </a>
-      </div>
+        </a></div>
+
     </div>
-    <div class="Grid Grid--gutters Grid--cols-2 Grid--top">
-      <div class="Grid-cell">
-
-
-        <a> <button class="buttonLanding arrButtonResume">Button
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell"> <a> <button class="buttonLanding arrButtonResume">Button
             &nbsp; </button></a>
         <a> <button class="button-35 DS">Button</button></a>
       </div>
     </div>
+
   </div>
   <!-- icon, button -->
   <div class="blankHM"></div>
@@ -409,7 +407,6 @@
                   nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.</li>
               </ul>
-
             </h4>
           </div>
         </div>
@@ -417,6 +414,8 @@
     </div>
   </div>
   <!-- note 1 -->
+  <div class="blankHS"></div>
+
   <!-- note 2 -->
 
   <div class="blankHM"></div>
@@ -461,10 +460,6 @@
         <div class="Demo  ">480px</div>
       </div>
     </div>
-
-
-
-    <div class="blankHS"></div>
 
 
   </div>
@@ -664,7 +659,7 @@
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
         <h5 class="element ">For more information please visit my website </h5>
-        <a href="https://vickywang.me" class="textDecor" target="_blank">VICKYWANG.ME</a>
+        <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
       </div>
     </div>
     <div class="blankHL"></div>
@@ -711,19 +706,19 @@
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+          <img class="footer-logo" src="../icon/mail.svg" alt="email">
         </a>
 
         <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
         </a>
 
         <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../../icon/git.svg" alt="github">
+          <img class="footer-logo" src="../icon/git.svg" alt="github">
         </a>
 
         <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
