--- a/design_system/index.html
+++ b/design_system/index.html
@@ -346,14 +346,16 @@
         <div class="blankHS"></div>
 
         <strong>
-          <h2>Bold Lorem ipsum dolor sit amet</h2>
+          <h3>Bold, Lorem ipsum dolor sit amet</h3>
+          <h3 class="allCaps">Bold &#38; Uppercase, Lorem ipsum dolor sit amet</h3>
+
         </strong>
 
         <p class="tArrow">specialText, Lorem ipsum dolor sit amet</p>
         <p class="specialTextHR">specialText, Lorem ipsum dolor sit amet</p>
 
-        <h4><a href="" class="textUnderline colorGrey">text decoration</a></h4>
-        <h4 class="textDecor">text decoration</h4>
+        <h3><a href="" class="textUnderline colorGrey">text decoration</a></h3>
+        <h3 class="textDecor">text decoration</h3>
       </div>
     </div>
   </div>
