--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <div class="blankHS"></div>
   <!-- Arrow -->
   <div class="wrapper">
-    <p class="tArrow">Web App <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+    <p class="tArrow">Recent Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
   </div>
   <!-- Arrow -->
   <div class="blankHS"></div>
@@ -236,59 +236,38 @@
 
       </div>
     </div>
-  </div>
+    <div class="blankHXS"></div>
 
 
-
-
-  <div class="blankHM"></div>
-  <!-- Work Sample -->
-  <!-- Arrow -->
-  <div class="wrapper">
-    <p class="tArrow">Work Samples<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
-  </div>
-  <!-- Arrow -->
-  <div class="blankHS"></div>
-
-  <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
+
       <div class="Grid-cell">
-        <div class="">
-          <div class="elementInner float cardBorder elementCard">
-            <div class="img__wrap">
-              <img class="img__img" src="./image/Cover_worksample.png" />
-              <div class="img__description">
-                <div class="input-field">
-                  <input type="password" id="password" placeholder="password">
-                  <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
-                  </button>
-                  <div class="blankHXS"></div>
-                  <div class="pwIncorrectHeight">
-                    <span id="pwIncorrect">Password is incorrect </span>
-                  </div>
+
+        <div class="elementCard float cardBorder">
+          <div class="img__wrap">
+            <img class="img__img" src="./image/Cover_worksample.png" />
+            <div class="img__description">
+              <div class="input-field">
+                <input type="password" id="password" placeholder="password">
+                <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
+                </button>
+                <div class="blankHXS"></div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
                 </div>
               </div>
             </div>
           </div>
+          <div class="element">
+            <div class="element">
+              <h5>For website vickywang.me </h5>
+              <h3 class="arrCard colorBlack">Work Samples</h3>
+              <h4>broad skill set developed in a startup environment
+                with deep engagement in all stages of the design process</h4>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
-  </div>
-  <!-- Work Sample -->
-  <div class="blankHM"></div>
-
-  <!-- Design System -->
-  <!-- Arrow -->
-  <div class="wrapper">
-    <p class="tArrow">Design System <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
-  </div>
-  <!-- Arrow -->
-  <div class="blankHS"></div>
-
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
-
       <div class="Grid-cell">
         <a href="/design_system/">
           <div class="">
@@ -299,19 +278,18 @@
                 <div class="element">
                   <h5>For website vickywang.me </h5>
                   <h3 class="arrCard colorBlack">Design System</h3>
-                  <h4>Creating a design system to establish consistent branding and styling across the entire website</h4>
+                  <h4>Creating a design system to establish consistent branding and styling across the entire website
+                  </h4>
                 </div>
               </div>
             </div>
           </div>
         </a>
       </div>
-
-
     </div>
-
   </div>
-  <!-- Design System -->
+
+
   <div class="blankHM"></div>
 
   <!-- Arrow -->
