--- a/index.html
+++ b/index.html
@@ -138,49 +138,52 @@
 
   <div class="blankHM"></div>
   <!--intro-->
-  <div class="wrapper element">
-    <div class="t-hello">hello, I'm Vicky. </div>
+  <div class="wrapper">
+    <div class="element">
 
-    <div class="intro" data-aos="fade-up">
-      <div class="column">
-        <div class="Grid Grid--gutters">
-          <div class="Grid-cell">
-            <strong>
-              <div class="intro">
-                <h1> UI/UX designer &nbsp;</h1>
-                <span class="divider1"></span>
-                <h1> Product designer </h1>
-              </div>
-            </strong>
+      <div class="t-hello">hello, I'm Vicky. </div>
+
+      <div class="intro" data-aos="fade-up">
+        <div class="column">
+          <div class="Grid Grid--gutters">
+            <div class="Grid-cell">
+              <strong>
+                <div class="intro">
+                  <h1> UI/UX designer &nbsp;</h1>
+                  <span class="divider1"></span>
+                  <h1> Product designer </h1>
+                </div>
+              </strong>
+            </div>
           </div>
+
         </div>
-
       </div>
-    </div>
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <h4>I am currently based out of San Francisco</h4>
-        <h4>design for business and consumer-facing websites with a small team</h4>
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <h4>I am currently based out of San Francisco</h4>
+          <h4>design for business and consumer-facing websites with a small team</h4>
+        </div>
       </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
-      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
-        <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
-      </a>
-      <a href="https://github.com/vicky-wyq" target="_blank">
-        <img class="intro-logo" src="./icon/git.svg" alt="github">
-      </a>
+      <div class="Grid Grid--gutters Grid--cols-3">
+        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
+          <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
+        </a>
+        <a href="https://github.com/vicky-wyq" target="_blank">
+          <img class="intro-logo" src="./icon/git.svg" alt="github">
+        </a>
 
-      <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
-        <img class="intro-logo" src="./icon/ins.svg" alt="medium">
-      </a>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
-      <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
-          &nbsp;
-        </button></a>
-      <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
-        </button></a>
+        <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
+          <img class="intro-logo" src="./icon/ins.svg" alt="medium">
+        </a>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-3">
+        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
+            &nbsp;
+          </button></a>
+        <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
+          </button></a>
+      </div>
     </div>
   </div>
   <!--intro-->
@@ -189,8 +192,10 @@
 
   <div class="blankHS"></div>
   <!-- Arrow -->
-  <div class="wrapper">
-    <p class="tArrow">Recent Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+  <div class="wrapper ">
+    <div class="element">
+      <p class="tArrow">Recent Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
   </div>
   <!-- Arrow -->
   <div class="blankHS"></div>
@@ -198,27 +203,27 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <a href="/appointa/">
-          <div class="">
-
-            <div class="elementCard float cardBorder APPOINTA">
-              <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
-              <div class="element">
+        <div class="element">
+          <a href="/appointa/">
+            <div class="">
+              <div class="elementCard float cardBorder APPOINTA">
+                <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
                 <div class="element">
-                  <h5>For job interview scheduling</h5>
-                  <h3 class="arrCard colorBlack">APPOINTA</h3>
-                  <h4>Streamline the job interview scheduling process to make it more efficient,
-                    convenient, and intuitive</h4>
+                  <div class="element">
+                    <h5>For job interview scheduling</h5>
+                    <h3 class="arrCard colorBlack">APPOINTA</h3>
+                    <h4>Streamline the job interview scheduling process to make it more efficient,
+                      convenient, and intuitive</h4>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
       <div class="Grid-cell">
-        <a href="/seer/">
-          <div class="">
-
+        <div class="element">
+          <a href="/seer/">
             <div class="elementCard float cardBorder SEER">
               <img src="./image/Cover_SEER.jpg" alt="SEER">
               <div class="element">
@@ -231,9 +236,8 @@
                 </div>
               </div>
             </div>
-          </div>
-        </a>
-
+          </a>
+        </div>
       </div>
     </div>
     <div class="blankHXS"></div>
@@ -242,49 +246,52 @@
     <div class="Grid Grid--gutters Grid--cols-2">
 
       <div class="Grid-cell">
-
-        <div class="elementCard float cardBorder">
-          <div class="img__wrap">
-            <img class="img__img" src="./image/Cover_worksample.png" />
-            <div class="img__description">
-              <div class="input-field">
-                <input type="password" id="password" placeholder="password">
-                <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
-                </button>
-                <div class="blankHXS"></div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
+        <div class="element">
+          <div class="elementCard float cardBorder">
+            <div class="img__wrap">
+              <img class="img__img" src="./image/Cover_worksample.png" />
+              <div class="img__description">
+                <div class="input-field">
+                  <input type="password" id="password" placeholder="password">
+                  <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
+                  </button>
+                  <div class="blankHXS"></div>
+                  <div class="pwIncorrectHeight">
+                    <span id="pwIncorrect">Password is incorrect </span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="element">
             <div class="element">
-              <h5>For website vickywang.me </h5>
-              <h3 class="arrCard colorBlack">Work Samples</h3>
-              <h4>broad skill set developed in a startup environment
-                with deep engagement in all stages of the design process</h4>
+              <div class="element">
+                <h5>Password is required </h5>
+                <h3 class="arrCard colorBlack">Work Samples</h3>
+                <h4>broad skill set developed in a startup environment
+                  with deep engagement in all stages of the design process</h4>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="Grid-cell">
-        <a href="/design_system/">
-          <div class="">
+        <div class="element">
+          <a href="/design_system/">
+            <div class="">
 
-            <div class="elementCard float cardBorder">
-              <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
-              <div class="element">
+              <div class="elementCard float cardBorder">
+                <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
                 <div class="element">
-                  <h5>For website vickywang.me </h5>
-                  <h3 class="arrCard colorBlack">Design System</h3>
-                  <h4>Creating a design system to establish consistent branding and styling across the entire website
-                  </h4>
+                  <div class="element">
+                    <h5>For website vickywang.me </h5>
+                    <h3 class="arrCard colorBlack">Design System</h3>
+                    <h4>Creating a design system to establish consistent branding and styling across the entire website
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -293,62 +300,67 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <!-- Arrow -->
   <div class="wrapper">
-    <p class="tArrow">Other project<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="element">
+      <p class="tArrow">Other project<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
   </div>
-  <!-- Arrow -->
   <!-- Arrow -->
   <div class="blankHM"></div>
   <!-- projects other -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <a href="/gardeners_hub/">
-          <div class="elementCard float cardBorder">
-            <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
-            <div class="element">
+        <div class="element">
+          <a href="/gardeners_hub/">
+            <div class="elementCard float cardBorder">
+              <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
               <div class="element">
-                <h5>For Gardeners</h5>
-                <h3>Gardeners Hub</h3>
-                <h5>Find solutions and ideas to help gardeners to
-                  improve their horticultural experience with neighbors and reduce wasting resources
-                  by selling or sharing locally.</h5>
+                <div class="element">
+                  <h5>For Gardeners</h5>
+                  <h3>Gardeners Hub</h3>
+                  <h5>Find solutions and ideas to help gardeners to
+                    improve their horticultural experience with neighbors and reduce wasting resources
+                    by selling or sharing locally.</h5>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="Grid-cell">
-        <a href="/appointment_maker/">
-          <div class="elementCard float cardBorder">
-            <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
-            <div class="element">
-              <div class="element">
-                <h5>For makeing appointment</h5>
-                <h3>Appointment Maker</h3>
-                <h5>Appointment maker is a personal reminder that combines different tasks into one
-                  App. easy to manage appointment scheduling.</h5>
-              </div>
-            </div>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
       <div class="Grid-cell">
-        <a href="/meal_planner/">
-          <div class="elementCard float cardBorder">
-            <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
-            <div class="element">
+        <div class="element">
+          <a href="/appointment_maker/">
+            <div class="elementCard float cardBorder">
+              <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
               <div class="element">
-                <h5 class="">For plan meal</h5>
-                <h3>Meal Planner</h3>
-                <h5>A single mobile app that helps people to improve their cooking experience by
-                  generating a shopping list based on information from their kitchen</h5>
+                <div class="element">
+                  <h5>For makeing appointment</h5>
+                  <h3>Appointment Maker</h3>
+                  <h5>Appointment maker is a personal reminder that combines different tasks into one
+                    App. easy to manage appointment scheduling.</h5>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <a href="/meal_planner/">
+            <div class="elementCard float cardBorder">
+              <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
+              <div class="element">
+                <div class="element">
+                  <h5 class="">For plan meal</h5>
+                  <h3>Meal Planner</h3>
+                  <h5>A single mobile app that helps people to improve their cooking experience by
+                    generating a shopping list based on information from their kitchen</h5>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
